Update Employee Promotion Prediction ML Model.ipynb

--- a/Employee Promotion Prediction ML Model.ipynb
+++ b/Employee Promotion Prediction ML Model.ipynb
@@ -2958,9 +2958,9 @@
    ],
    "source": [
     "# Lets use Decision Trees to classify the data\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "model = DecisionTreeClassifier()\n",
+    "model = LogisticRegression()\n",
     "model.fit(x_train, y_train)\n",
     "\n",
     "y_pred = model.predict(x_valid)"
